--- a/astro-frontend/src/components/Nav.astro
+++ b/astro-frontend/src/components/Nav.astro
@@ -34,17 +34,17 @@
 
       <!-- Right -->
       <ul class=" flex items-center gap-6">
-        <li class="item">
+        <li>
           <a href="/" class="block text-zinc-900 dark:text-gray-200">Home</a>
         </li>
-        <li class="item">
+        <li>
           <a href="/" class="block text-zinc-900 dark:text-gray-200">About</a>
         </li>
-        <li class="item">
+        <li>
           <a href="/" class="block text-zinc-900 dark:text-gray-200">Contact</a>
         </li>
     
-        <li class="icons flex gap-4  text-zinc-900 dark:text-gray-200 cursor-pointer items-center">
+        <li class=" flex gap-4  text-zinc-900 dark:text-gray-200 cursor-pointer items-center">
 
           
           <!-- User Icon -->
