slider component has been completed

--- a/astro-frontend/src/components/Footer.astro
+++ b/astro-frontend/src/components/Footer.astro
@@ -2,10 +2,7 @@
           const props = Astro.props
 
 ---
-<div class="my-5  flex items-center justify-center">
-    <div class="top flex gap-12">
-    
-    
+<footer class="my-5  flex  justify-center">
     <div class=" flex items-center justify-between mt-12">
       <div class=" flex items-center">
         <a href="/" class="  text-[12px] font-semibold dark:text-white  items-center "
@@ -23,7 +20,7 @@
         </span>
       </div>
     </div>
-  </div>
+  </footer>
 
   <script>
     const copyrightYear= document.querySelector('.copyright');
