--- a/astro-frontend/src/components/Nav.astro
+++ b/astro-frontend/src/components/Nav.astro
@@ -4,7 +4,7 @@
 ---
 
 <nav class="border-b bg-white dark:bg-zinc-800 dark:border-zinc-700">
-    <div class="flex items-baseline justify-end sm:justify-between p-4 max-w-screen-xl mx-auto">
+    <div class="flex justify-end sm:justify-between p-4 max-w-screen-xl mx-auto h-[80px]">
       <!-- Left -->
       <ul class=" flex items-center gap-6 ">
         <li >
@@ -19,8 +19,8 @@
       </ul>
 
       <!-- Center -->
-      <div>
-        <a href="/" class="  font-semibold dark:text-white  items-center "
+      <div class="flex items-center">
+        <a href="/" class="font-semibold dark:text-white  items-center "
         > 
         <span class="flex items-center gap-2 text-red-400">
       
