--- a/astro-frontend/src/layouts/Base.astro
+++ b/astro-frontend/src/layouts/Base.astro
@@ -28,12 +28,12 @@ const description = "Astro and Supabase demo app";
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body
-    class="flex flex-col h-full w-full dark:bg-zinc-900 bg-zinc-50 dark:text-zinc-100 overflow-hidden"
+    class="flex flex-col h-full w-full dark:bg-zinc-900 bg-zinc-50 dark:text-zinc-100 overflow-x-hidden"
   >
     <Nav/>
     <main class="h-full">
     <slot />
     </main>
-    <Footer/>
+    <!-- <Footer/> -->
   </body>
 </html>
