--- a/astro-frontend/src/pages/index.astro
+++ b/astro-frontend/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import FeaturedProducts from "../components/FeaturedProducts.astro";
 import Slider from "../components/Slider.astro";
 import Base from "../layouts/Base.astro";
 export const prerender = true;
@@ -7,4 +8,6 @@ const title = "Home | AstroCommerce";
 
 <Base title={title}>
 <Slider/>
+<FeaturedProducts title={"Feature Products"}/>
+<FeaturedProducts title={"Trending  Products"}/>
 </Base>
