single product page

--- a/astro-frontend/src/layouts/Base.astro
+++ b/astro-frontend/src/layouts/Base.astro
@@ -31,9 +31,9 @@ const description = "Astro and Supabase demo app";
     class="flex flex-col h-full w-full dark:bg-zinc-900 bg-zinc-50 dark:text-zinc-100 overflow-x-hidden"
   >
     <Nav/>
-    <main class="h-full">
+    <main>
     <slot />
     </main>
-    <!-- <Footer/> -->
+    <Footer/>
   </body>
 </html>
