--- a/astro-frontend/src/components/Footer.astro
+++ b/astro-frontend/src/components/Footer.astro
@@ -2,8 +2,7 @@
           const props = Astro.props
 
 ---
-<footer class="my-5  flex  justify-center">
-    <div class=" flex items-center justify-between mt-12">
+<footer class="flex justify-center">
       <div class=" flex items-center">
         <a href="/" class="  text-[12px] font-semibold dark:text-white  items-center "
         > 
@@ -19,7 +18,6 @@
           | © Copyright <span class="copyright"></span> All Rights Reserved
         </span>
       </div>
-    </div>
   </footer>
 
   <script>
